gramatica.txt
program -> decls stmts

decls -> decl decls | ϵ

decl -> type id { symtable.insert(id, type) } 
      | matrix_decl

type -> "int" | "float" | "bool"

matrix_decl -> type id "[" integer ":" integer "]"

matrix_init -> "{" matrix_rows "}"
matrix_rows -> "{" values "}" | "{" values "}" "," matrix_rows
values -> integer | integer "," values

stmts -> stmt stmts | ϵ

stmt -> if_stmt 
      | for_stmt 
      | while_stmt 
      | do_while_stmt
      | func_decl
      | expr
      | func_call


if_stmt -> "if" "(" expr ")" block else_block
else_block -> "else" block | ϵ

for_stmt -> "for" "(" id "=" expr ";" expr ";" id = expr ")" block

while_stmt -> "while" "(" expr ")" block

do_while_stmt -> "do" block "while" "(" expr ")"

func_call -> id "(" params ")"

func_decl -> "func" id "(" params ")"":" type block

params -> param "," params | param | ϵ
param -> type id

block -> "{" stmts "}"

expr -> id "=" expr | bool_expr | arithmetic_expr | id "(" args ")"

bool_expr -> expr "==" expr 
           | expr "!=" expr 
           | expr "<" expr 
           | expr ">" expr 
           | expr "<=" expr 
           | expr ">=" expr

arithmetic_expr -> expr "+" term 
                 | expr "-" term 
                 | term

term -> term "*" factor 
      | term "/" factor 
      | factor

factor -> integer | float | id | "(" expr ")"

args -> expr "," args | expr | ϵ
